
EXTRA_DIST = \
test-read-write/test0.xml	\
test-read-write/test1.xml	\
test-read-write/test2.xml	\
test-read-write/test3.xml	\
test-read-write/test4.xml	\
test-read-write/test5.xml	\
test-read-write/test6.xml	\
test-read-write/test7.xml	\
test-read-write/test8.xml	\
test-read-write/test9.xml	\
test-read-write/test10.xml	\
test-read-write/test11.xml	\
test-read-write/test12.xml	\
test-read-write/test13.xml	\
test-read-write/test14.xml	\
test-read-write/test15.xml	\
test-read-write/test16.xml \
test-read-write/test17.xml \
test-read-write/test18.xml \
test-read-write/test19.xml \
test-read-write/test20.xml \
test-read-write/test21.xml \
test-read-write/test22.xml \
test-read-write/test23.xml \
test-read-write/test24.xml \
test-read-write/test25.xml \
\
test-write-read-archive/test0.xml \
test-write-read-archive/test1.xml \
test-write-read-archive/test2.xml \
test-write-read-archive/test3.xml \
test-write-read-archive/test4.xml \
\
test-core-diff/report0.txt \
test-core-diff/report1.txt \
test-core-diff/report2.txt \
test-core-diff/report3.txt \
test-core-diff/report4.txt \
test-core-diff/report5.txt \
test-core-diff/report6.txt \
test-core-diff/report7.txt \
test-core-diff/report8.txt \
test-core-diff/report9.txt \
test-core-diff/report10.txt \
test-core-diff/report11.txt \
test-core-diff/report12.txt \
test-core-diff/report13.txt \
\
test-abidiff/test-enum0-v0.cc.bi		\
test-abidiff/test-enum0-v1.cc.bi		\
test-abidiff/test-enum0-report.txt		\
test-abidiff/test-enum1-v0.cc.bi		\
test-abidiff/test-enum1-v1.cc.bi		\
test-abidiff/test-enum1-report.txt		\
test-abidiff/test-qual-type0-v0.cc.bi	\
test-abidiff/test-qual-type0-v1.cc.bi	\
test-abidiff/test-qual-type0-report.txt	\
test-abidiff/test-struct0-v0.cc.bi		\
test-abidiff/test-struct0-v1.cc.bi		\
test-abidiff/test-struct0-report.txt	\
test-abidiff/test-struct1-v0.cc.bi	 	\
test-abidiff/test-struct1-v1.cc.bi		\
test-abidiff/test-struct1-report.txt	\
test-abidiff/test-var0-v0.cc.bi		\
test-abidiff/test-var0-v1.cc.bi		\
test-abidiff/test-var0-report.txt		\
\
test-diff-dwarf/test0-v0.cc		\
test-diff-dwarf/test0-v0.o			\
test-diff-dwarf/test0-v1.cc		\
test-diff-dwarf/test0-v1.o			\
test-diff-dwarf/test0-report.txt		\
test-diff-dwarf/test1-v0.cc		\
test-diff-dwarf/test1-v0.o			\
test-diff-dwarf/test1-v1.cc		\
test-diff-dwarf/test1-v1.o			\
test-diff-dwarf/test1-report.txt		\
test-diff-dwarf/test2-v0.cc		\
test-diff-dwarf/test2-v0.o			\
test-diff-dwarf/test2-v1.cc		\
test-diff-dwarf/test2-v1.o			\
test-diff-dwarf/test2-report.txt		\
test-diff-dwarf/test3-v0.cc		\
test-diff-dwarf/test3-v0.o			\
test-diff-dwarf/test3-v1.cc		\
test-diff-dwarf/test3-v1.o			\
test-diff-dwarf/test3-report.txt		\
test-diff-dwarf/test4-v0.cc		\
test-diff-dwarf/test4-v0.o			\
test-diff-dwarf/test4-v1.cc		\
test-diff-dwarf/test4-v1.o			\
test-diff-dwarf/test4-report.txt		\
test-diff-dwarf/test5-v0.cc		\
test-diff-dwarf/test5-v0.o			\
test-diff-dwarf/test5-v1.cc		\
test-diff-dwarf/test5-v1.o			\
test-diff-dwarf/test5-report.txt		\
test-diff-dwarf/test6-v0.cc		\
test-diff-dwarf/test6-v0.o			\
test-diff-dwarf/test6-v1.cc		\
test-diff-dwarf/test6-v1.o			\
test-diff-dwarf/test6-report.txt		\
test-diff-dwarf/test7-v0.cc		\
test-diff-dwarf/test7-v0.o			\
test-diff-dwarf/test7-v1.cc		\
test-diff-dwarf/test7-v1.o			\
test-diff-dwarf/test7-report.txt		\
test-diff-dwarf/test8-v0.cc		\
test-diff-dwarf/test8-v0.o			\
test-diff-dwarf/test8-v1.cc		\
test-diff-dwarf/test8-v1.o			\
test-diff-dwarf/test8-report.txt		\
test-diff-dwarf/test9-v0.cc		\
test-diff-dwarf/libtest9-v0.so		\
test-diff-dwarf/test9-v1.cc		\
test-diff-dwarf/libtest9-v1.so		\
test-diff-dwarf/test9-report.txt		\
test-diff-dwarf/test10-v0.cc		\
test-diff-dwarf/test10-v0.o		\
test-diff-dwarf/test10-v1.cc		\
test-diff-dwarf/test10-v1.o		\
test-diff-dwarf/test10-report.txt		\
test-diff-dwarf/test11-v0.cc		\
test-diff-dwarf/test11-v0.o		\
test-diff-dwarf/test11-v1.cc		\
test-diff-dwarf/test11-v1.o		\
test-diff-dwarf/test11-report.txt		\
test-diff-dwarf/test12-v0.c		\
test-diff-dwarf/libtest12-v0.so		\
test-diff-dwarf/test12-v1.c		\
test-diff-dwarf/libtest12-v1.so		\
test-diff-dwarf/test12-version-script	\
test-diff-dwarf/test12-report.txt		\
test-diff-dwarf/test13-v0.cc		\
test-diff-dwarf/test13-v0.o		\
test-diff-dwarf/test13-v1.cc		\
test-diff-dwarf/test13-v1.o		\
test-diff-dwarf/test13-report.txt		\
test-diff-dwarf/test14-inline-v0.cc	\
test-diff-dwarf/test14-inline-v0.o		\
test-diff-dwarf/test14-inline-v1.cc	\
test-diff-dwarf/test14-inline-v1.o		\
test-diff-dwarf/test14-inline-report.txt	\
test-diff-dwarf/test15-enum-v0.cc		\
test-diff-dwarf/test15-enum-v0.o		\
test-diff-dwarf/test15-enum-v1.cc		\
test-diff-dwarf/test15-enum-v1.o		\
test-diff-dwarf/test15-enum-report.txt	\
test-diff-dwarf/test16-syms-only-v0.o \
test-diff-dwarf/test16-syms-only-v1.o \
test-diff-dwarf/test16-syms-only-v0.cc \
test-diff-dwarf/test16-syms-only-v1.cc \
test-diff-dwarf/test16-syms-only-report.txt \
test-diff-dwarf/test17-non-refed-syms-v0.o \
test-diff-dwarf/test17-non-refed-syms-v1.o \
test-diff-dwarf/test17-non-refed-syms-v0.cc \
test-diff-dwarf/test17-non-refed-syms-v1.cc \
test-diff-dwarf/libtest18-alias-sym-v0.so \
test-diff-dwarf/libtest18-alias-sym-v1.so \
test-diff-dwarf/test18-alias-sym-report-0.txt \
test-diff-dwarf/test18-alias-sym-v0.cc \
test-diff-dwarf/test18-alias-sym-v1.cc \
test-diff-dwarf/test18-alias-sym-version-script \
\
test-read-dwarf/test0			\
test-read-dwarf/test0.abi			\
test-read-dwarf/test0.cc			\
test-read-dwarf/test1			\
test-read-dwarf/test1.abi			\
test-read-dwarf/test1.cc			\
test-read-dwarf/test2.h		\
test-read-dwarf/test2-0.cc		\
test-read-dwarf/test2-1.cc		\
test-read-dwarf/test2.so		\
test-read-dwarf/test2.so.abi		\
test-read-dwarf/test3.c		\
test-read-dwarf/test3.so		\
test-read-dwarf/test3.so.abi		\
test-read-dwarf/test4.c		\
test-read-dwarf/test4.so		\
test-read-dwarf/test4.so.abi		\
test-read-dwarf/test5.cc		\
test-read-dwarf/test5.o		\
test-read-dwarf/test5.o.abi		\
test-read-dwarf/test6.cc		\
test-read-dwarf/test6.so		\
test-read-dwarf/test6.so.abi		\
test-read-dwarf/test7.cc		\
test-read-dwarf/test7.so		\
test-read-dwarf/test7.so.abi		\
test-read-dwarf/test8-qualified-this-pointer.cc		\
test-read-dwarf/test8-qualified-this-pointer.so		\
test-read-dwarf/test8-qualified-this-pointer.so.abi		\
\
test-diff-filter/test0-v0.cc		\
test-diff-filter/test0-v1.cc		\
test-diff-filter/test0-v0.o		\
test-diff-filter/test0-v1.o		\
test-diff-filter/test0-report.txt		\
test-diff-filter/test01-report.txt		\
test-diff-filter/test1-v0.cc		\
test-diff-filter/test1-v1.cc		\
test-diff-filter/test1-v0.o		\
test-diff-filter/test1-v1.o		\
test-diff-filter/test1-report.txt		\
test-diff-filter/test2-v0.cc		\
test-diff-filter/test2-v1.cc		\
test-diff-filter/test2-v0.o		\
test-diff-filter/test2-v1.o		\
test-diff-filter/test2-report.txt		\
test-diff-filter/test3-v0.cc		\
test-diff-filter/test3-v1.cc		\
test-diff-filter/test3-v0.o		\
test-diff-filter/test3-v1.o		\
test-diff-filter/test3-report.txt		\
test-diff-filter/test4-v0.cc		\
test-diff-filter/test4-v1.cc		\
test-diff-filter/test4-v0.o		\
test-diff-filter/test4-v1.o		\
test-diff-filter/test4-report.txt		\
test-diff-filter/test5-v0.cc		\
test-diff-filter/test5-v1.cc		\
test-diff-filter/test5-v0.o		\
test-diff-filter/test5-v1.o		\
test-diff-filter/test5-report.txt		\
test-diff-filter/test6-v0.cc		\
test-diff-filter/test6-v1.cc		\
test-diff-filter/test6-v0.o		\
test-diff-filter/test6-v1.o		\
test-diff-filter/test6-report.txt		\
test-diff-filter/test7-v0.cc		\
test-diff-filter/test7-v1.cc		\
test-diff-filter/test7-v0.o		\
test-diff-filter/test7-v1.o		\
test-diff-filter/test7-report.txt		\
test-diff-filter/test8-v0.cc		\
test-diff-filter/test8-v1.cc		\
test-diff-filter/test8-v0.o		\
test-diff-filter/test8-v1.o		\
test-diff-filter/test8-report.txt		\
test-diff-filter/test9-v0.cc		\
test-diff-filter/test9-v1.cc		\
test-diff-filter/test9-v0.o		\
test-diff-filter/test9-v1.o		\
test-diff-filter/test9-report.txt		\
test-diff-filter/test10-v0.cc		\
test-diff-filter/test10-v1.cc		\
test-diff-filter/test10-v0.o		\
test-diff-filter/test10-v1.o		\
test-diff-filter/test10-report.txt		\
test-diff-filter/test11-v0.cc		\
test-diff-filter/test11-v1.cc		\
test-diff-filter/test11-v0.o		\
test-diff-filter/test11-v1.o		\
test-diff-filter/test11-report.txt		\
test-diff-filter/test12-v0.cc		\
test-diff-filter/test12-v1.cc		\
test-diff-filter/test12-v0.o		\
test-diff-filter/test12-v1.o		\
test-diff-filter/test12-report.txt		\
test-diff-filter/test13-v0.cc		\
test-diff-filter/test13-v1.cc		\
test-diff-filter/test13-v0.o		\
test-diff-filter/test13-v1.o		\
test-diff-filter/test13-report.txt		\
test-diff-filter/test14-v0.cc		\
test-diff-filter/test14-v1.cc		\
test-diff-filter/test14-v0.o		\
test-diff-filter/test14-v1.o		\
test-diff-filter/test14-0-report.txt	\
test-diff-filter/test14-1-report.txt	\
test-diff-filter/test15-v0.cc		\
test-diff-filter/test15-v1.cc		\
test-diff-filter/test15-v0.o		\
test-diff-filter/test15-v1.o		\
test-diff-filter/test15-0-report.txt	\
test-diff-filter/test15-1-report.txt	\
test-diff-filter/test16-v0.cc		\
test-diff-filter/test16-v1.cc		\
test-diff-filter/test16-v0.o		\
test-diff-filter/test16-v1.o		\
test-diff-filter/test16-report.txt		\
test-diff-filter/test17-v0.cc		\
test-diff-filter/test17-v1.cc		\
test-diff-filter/test17-v0.o		\
test-diff-filter/test17-v1.o		\
test-diff-filter/test17-0-report.txt	\
test-diff-filter/test17-1-report.txt	\
test-diff-filter/test18-v0.cc		\
test-diff-filter/test18-v1.cc		\
test-diff-filter/test18-v0.o		\
test-diff-filter/test18-v1.o		\
test-diff-filter/test18-report.txt		\
test-diff-filter/test19-enum-v0.cc		\
test-diff-filter/test19-enum-v1.cc		\
test-diff-filter/test19-enum-v0.o		\
test-diff-filter/test19-enum-v1.o		\
test-diff-filter/test19-enum-report-0.txt  \
test-diff-filter/test19-enum-report-1.txt  \
test-diff-filter/test20-inline-v0.cc	\
test-diff-filter/test20-inline-v1.cc	\
test-diff-filter/test20-inline-v0.o	\
test-diff-filter/test20-inline-v1.o	\
test-diff-filter/test20-inline-report-0.txt \
test-diff-filter/test20-inline-report-1.txt \
\
test-diff-suppr/test0-type-suppr-v0.cc	\
test-diff-suppr/test0-type-suppr-v1.cc	\
test-diff-suppr/test0-type-suppr-v0.o	\
test-diff-suppr/test0-type-suppr-v1.o	\
test-diff-suppr/test0-type-suppr-0.suppr	\
test-diff-suppr/test0-type-suppr-1.suppr	\
test-diff-suppr/test0-type-suppr-2.suppr	\
test-diff-suppr/test0-type-suppr-report-0.txt \
test-diff-suppr/test0-type-suppr-report-1.txt \
test-diff-suppr/test0-type-suppr-report-2.txt \
test-diff-suppr/test0-type-suppr-report-3.txt \
test-diff-suppr/test1-typedef-suppr.h	 \
test-diff-suppr/test1-typedef-suppr-v0.c	 \
test-diff-suppr/test1-typedef-suppr-v1.c	 \
test-diff-suppr/test1-typedef-suppr-v0.o	 \
test-diff-suppr/test1-typedef-suppr-v1.o	 \
test-diff-suppr/test1-typedef-suppr-0.suppr	 \
test-diff-suppr/test1-typedef-suppr-1.suppr 	 \
test-diff-suppr/test1-typedef-suppr-report-0.txt \
test-diff-suppr/test1-typedef-suppr-report-1.txt \
test-diff-suppr/test1-typedef-suppr-report-2.txt \
test-diff-suppr/test2-struct-suppr-0.suppr \
test-diff-suppr/test2-struct-suppr-1.suppr \
test-diff-suppr/test2-struct-suppr-report-0.txt \
test-diff-suppr/test2-struct-suppr-report-1.txt \
test-diff-suppr/test2-struct-suppr-v0.cc \
test-diff-suppr/test2-struct-suppr-v1.cc \
test-diff-suppr/test2-struct-suppr-v0.o \
test-diff-suppr/test2-struct-suppr-v1.o \
test-diff-suppr/test3-struct-suppr-0.suppr \
test-diff-suppr/test3-struct-suppr-1.suppr \
test-diff-suppr/test3-struct-suppr-report-0.txt \
test-diff-suppr/test3-struct-suppr-report-1.txt \
test-diff-suppr/test3-struct-suppr-report-2.txt \
test-diff-suppr/test3-struct-suppr-v0.cc \
test-diff-suppr/test3-struct-suppr-v0.o \
test-diff-suppr/test3-struct-suppr-v1.cc \
test-diff-suppr/test3-struct-suppr-v1.o \
test-diff-suppr/libtest4-local-suppr-v0.so \
test-diff-suppr/libtest4-local-suppr-v1.so \
test-diff-suppr/test4-local-suppr-0.suppr \
test-diff-suppr/test4-local-suppr-report-0.txt \
test-diff-suppr/test4-local-suppr-report-1.txt \
test-diff-suppr/test4-local-suppr-v0.c \
test-diff-suppr/test4-local-suppr-v0.h \
test-diff-suppr/test4-local-suppr-v1.c \
test-diff-suppr/test4-local-suppr-v1.h \
test-diff-suppr/libtest5-fn-suppr-v0.so \
test-diff-suppr/libtest5-fn-suppr-v1.so \
test-diff-suppr/test5-fn-suppr-0.suppr \
test-diff-suppr/test5-fn-suppr-1.suppr \
test-diff-suppr/test5-fn-suppr-2.suppr \
test-diff-suppr/test5-fn-suppr-3.suppr \
test-diff-suppr/test5-fn-suppr-4.suppr \
test-diff-suppr/test5-fn-suppr-report-0.txt \
test-diff-suppr/test5-fn-suppr-report-1.txt \
test-diff-suppr/test5-fn-suppr-report-2.txt \
test-diff-suppr/test5-fn-suppr-report-3.txt \
test-diff-suppr/test5-fn-suppr-report-4.txt \
test-diff-suppr/test5-fn-suppr-report-5.txt \
test-diff-suppr/test5-fn-suppr-v0.cc \
test-diff-suppr/test5-fn-suppr-v1.cc \
test-diff-suppr/libtest6-fn-suppr-v0.so \
test-diff-suppr/libtest6-fn-suppr-v1.so \
test-diff-suppr/test6-fn-suppr-0.suppr \
test-diff-suppr/test6-fn-suppr-1.suppr \
test-diff-suppr/test6-fn-suppr-2.suppr \
test-diff-suppr/test6-fn-suppr-3.suppr \
test-diff-suppr/test6-fn-suppr-report-0.txt \
test-diff-suppr/test6-fn-suppr-report-1.txt \
test-diff-suppr/test6-fn-suppr-report-2.txt \
test-diff-suppr/test6-fn-suppr-report-3.txt \
test-diff-suppr/test6-fn-suppr-report-4.txt \
test-diff-suppr/test6-fn-suppr-v0.cc \
test-diff-suppr/test6-fn-suppr-v1.cc \
test-diff-suppr/test6-fn-suppr-version-script \
test-diff-suppr/libtest7-var-suppr-v0.so \
test-diff-suppr/libtest7-var-suppr-v1.so \
test-diff-suppr/test7-var-suppr-v0.cc \
test-diff-suppr/test7-var-suppr-v1.cc \
test-diff-suppr/test7-var-suppr-1.suppr \
test-diff-suppr/test7-var-suppr-2.suppr \
test-diff-suppr/test7-var-suppr-3.suppr \
test-diff-suppr/test7-var-suppr-4.suppr \
test-diff-suppr/test7-var-suppr-5.suppr \
test-diff-suppr/test7-var-suppr-6.suppr \
test-diff-suppr/test7-var-suppr-7.suppr \
test-diff-suppr/test7-var-suppr-8.suppr \
test-diff-suppr/test7-var-suppr-report-0.txt \
test-diff-suppr/test7-var-suppr-report-1.txt \
test-diff-suppr/test7-var-suppr-report-2.txt \
test-diff-suppr/test7-var-suppr-report-3.txt \
test-diff-suppr/test7-var-suppr-report-4.txt \
test-diff-suppr/test7-var-suppr-report-5.txt \
test-diff-suppr/test7-var-suppr-report-6.txt \
test-diff-suppr/test7-var-suppr-report-7.txt \
test-diff-suppr/test7-var-suppr-report-8.txt \
test-diff-suppr/test7-var-suppr-version-script \
\
test-lookup-syms/test0.cc			\
test-lookup-syms/test0.o			\
test-lookup-syms/test0-report.txt		\
test-lookup-syms/test01-report.txt		\
test-lookup-syms/test02-report.txt		\
test-lookup-syms/test1.c			\
test-lookup-syms/test1.version-script	\
test-lookup-syms/test1.so			\
test-lookup-syms/test1-1-report.txt	\
test-lookup-syms/test1-2-report.txt	\
test-lookup-syms/test1-3-report.txt	\
\
test-alt-dwarf-file/test0.cc		\
test-alt-dwarf-file/libtest0.so		\
test-alt-dwarf-file/test0-common.cc	\
test-alt-dwarf-file/libtest0-common.so	\
test-alt-dwarf-file/test0-report.txt	\
test-alt-dwarf-file/test0-debug-dir/test0-common-dwz.debug \
test-alt-dwarf-file/test0-debug-dir/.build-id/16/7088580c513b439c9ed95fe6a8b29496495f26.debug \
\
test-abicompat/libtest0-fn-changed-libapp-v0.so \
test-abicompat/libtest0-fn-changed-libapp-v1.so \
test-abicompat/test0-fn-changed-app \
test-abicompat/test0-fn-changed-0.suppr \
test-abicompat/test0-fn-changed-app.cc \
test-abicompat/test0-fn-changed-report-0.txt \
test-abicompat/test0-fn-changed-report-1.txt \
test-abicompat/test0-fn-changed-libapp.h \
test-abicompat/test0-fn-changed-libapp-v0.cc \
test-abicompat/test0-fn-changed-libapp-v1.cc \
test-abicompat/libtest1-fn-removed-v0.so \
test-abicompat/libtest1-fn-removed-v1.so \
test-abicompat/test1-fn-removed-app \
test-abicompat/test1-fn-removed-app.cc \
test-abicompat/test1-fn-removed-report-0.txt \
test-abicompat/test1-fn-removed-v0.cc \
test-abicompat/test1-fn-removed-v1.cc \
test-abicompat/libtest2-var-removed-v0.so \
test-abicompat/libtest2-var-removed-v1.so \
test-abicompat/test2-var-removed-app \
test-abicompat/test2-var-removed-app.cc \
test-abicompat/test2-var-removed-report-0.txt \
test-abicompat/test2-var-removed-v0.cc \
test-abicompat/test2-var-removed-v1.cc \
test-abicompat/libtest3-fn-removed-v0.so \
test-abicompat/libtest3-fn-removed-v1.so \
test-abicompat/test3-fn-removed-app \
test-abicompat/test3-fn-removed-app.cc \
test-abicompat/test3-fn-removed-report-0.txt \
test-abicompat/test3-fn-removed-v0.cc \
test-abicompat/test3-fn-removed-v1.cc \
test-abicompat/test3-fn-removed-version-script-0 \
test-abicompat/test3-fn-removed-version-script-1
